--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+remote_theme: yaoyao-liu/minimal-light
+
+title: Luca Zhou
+position: MS Student
+affiliation: Sapienza University of Rome
+email: lucazhou2000@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
@@ -12,11 +14,11 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+google_scholar: https://scholar.google.com.co/citations?hl=fr&user=n9akYT4AAAAJ
+cv_link: assets/files/Resume.pdf
+github_link: https://github.com/LuckerZOfficiaL
+linkedin: https://www.linkedin.com/in/luca-zhou-385b30183/
+twitter: https://x.com/LucaZh00
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
