--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ remote_theme: yaoyao-liu/minimal-light
 title: Luca Zhou
 position: MSc Student
 affiliation: Sapienza University of Rome
-email: [my name][my surname]2000[AT]gmail[DOT]com
+email: "[my name][my surname]2000[AT]gmail[DOT]com"
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
