--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ remote_theme: yaoyao-liu/minimal-light
 title: Luca Zhou
 position: MSc Student
 affiliation: Sapienza University of Rome
-email: "[my name][my surname]2000[AT]gmail[DOT]com"
+email: "[name][surname]2000[AT]gmail.com"
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
@@ -22,7 +22,7 @@ twitter: https://x.com/LucaZh00
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/avatar2.jpg
+avatar: ./assets/img/avatar4.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
