--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 remote_theme: yaoyao-liu/minimal-light
 
 title: Luca Zhou
-position: MSc Student
+position: MSc Student in Computer Science
 affiliation: Sapienza University of Rome
 email: "[name][surname]2000[AT]gmail.com"
 
