update CV and Google Scholar

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com.co/citations?hl=fr&user=n9akYT4AAAAJ
+google_scholar: https://scholar.google.com.co/citations?hl=en&user=n9akYT4AAAAJ
 cv_link: assets/files/Resume.pdf
 github_link: https://github.com/LuckerZOfficiaL
 linkedin: https://www.linkedin.com/in/luca-zhou-385b30183/
