update ATM paper status

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,4 +8,4 @@ main:
     code: https://github.com/LuckerZOfficiaL/Alternating-Tuning-and-Merging
     #bibtex: ""
     image: ./assets/img/atm.png
-    notes: Pre-print
+    notes: Breaking the Monolith Workshop @ICIAP 2025
