--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: yaoyao-liu/minimal-light
 
 title: Luca Zhou
 position: MSc in Computer Science
-affiliation: [GLADIA](https://gladia.di.uniroma1.it/authors/zhou/), Sapienza University of Rome
+affiliation: Sapienza University of Rome
 email: "[name][surname]2000[AT]gmail.com"
 
 # Search Engine Optimization (SEO)
