--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ twitter: https://x.com/LucaZh00
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/avatar4.jpg
 favicon: ./assets/img/favicon2.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon_dark: ./assets/img/favicon2.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
