--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ twitter: https://x.com/LucaZh00
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/avatar4.jpg
-favicon: ./assets/img/favicon2.png
-favicon_dark: ./assets/img/favicon2.png
+favicon: ./assets/img/favicon3.jpeg
+favicon_dark: ./assets/img/favicon3.jpeg
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
