--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 remote_theme: yaoyao-liu/minimal-light
 
 title: Luca Zhou
-position: PhD Candidate in Computer Science
+position: PhD Student
 affiliation: Sapienza University of Rome
-email: "[fname][DOT][lname][AT]uniroma1.it"
+email: "[fname].[lname][AT]uniroma1.it"
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
