--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@ main:
   - title: "On Task Vectors and Gradients"
     authors: Luca Zhou, Daniele Solombrino, Donato Crisostomi, Maria Sofia Bucarelli, Giuseppe Alessio D'Inverno, Fabrizio Silvestri, Emanuele Rodolà
     #conference_short: ""
-    conference: "UniReps @NeurIps 2025"
+    conference: "UniReps @NeurIPS 2025"
     pdf: https://arxiv.org/pdf/2508.16082
     code: https://github.com/LuckerZOfficiaL/Alternating-Tuning-and-Merging
     #bibtex: ""
