--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ twitter: https://x.com/LucaZh00
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/avatar6.JPG
+avatar: ./assets/img/avatar6.jpg
 favicon: ./assets/img/favicon4.png
 favicon_dark: ./assets/img/favicon4.png
 
